fix: contact alignment

--- a/styles/contactUs.module.scss
+++ b/styles/contactUs.module.scss
@@ -3,52 +3,58 @@
 
 .contact_us {
   @include center;
-  justify-content: space-between;
-  padding: 60px;
+  width: 100%;
 
-  .contact_card {
+  .innerContainer {
     @include center;
-    justify-content: flex-start;
-    gap: 14px;
+    width: 100%;
+    justify-content: space-between;
+    padding: 60px;
 
-    .icon {
-      width: 64px;
-      height: 64px;
-      background-color: rgb(255 255 255 / 0.2);
-      border-radius: 50%;
+    .contact_card {
       @include center;
+      justify-content: flex-start;
+      gap: 14px;
 
-      svg {
-        width: 32px;
-        height: 32px;
-        fill: $neon-green;
-        transition: all 0.3s ease-in-out;
-      }
-    }
-
-    &:hover {
       .icon {
-        background-color: $neon-green;
+        width: 64px;
+        height: 64px;
+        background-color: rgb(255 255 255 / 0.2);
+        border-radius: 50%;
+        @include center;
 
         svg {
-          fill: #fff;
+          width: 32px;
+          height: 32px;
+          fill: $neon-green;
+          transition: all 0.3s ease-in-out;
         }
       }
-    }
 
-    .handles {
-      letter-spacing: 0.5px;
+      &:hover {
+        .icon {
+          background-color: $neon-green;
 
-      p {
-        font-size: 12px;
-        font-weight: 500;
-        opacity: 0.4;
+          svg {
+            fill: #fff;
+          }
+        }
       }
 
-      h3 {
-        line-height: 32px;
-        font-size: 24px;
-        font-weight: 700;
+      .handles {
+        letter-spacing: 0.5px;
+
+        p {
+          font-size: 12px;
+          font-weight: 500;
+          opacity: 0.4;
+        }
+
+        h3 {
+          line-height: 32px;
+          font-size: 24px;
+          font-weight: 700;
+        }
       }
     }
   }
@@ -56,27 +62,29 @@
 
 @media screen and (max-width: 1200px) {
   .contact_us {
-    padding: 60px 0px;
+    .innerContainer {
+      padding: 60px 0px;
 
-    .contact_card {
-      .icon {
-        width: 48px;
-        height: 48px;
+      .contact_card {
+        .icon {
+          width: 48px;
+          height: 48px;
 
-        svg {
-          width: 24px;
-          height: 24px;
-        }
-      }
-
-      .handles {
-        h3 {
-          font-size: 20px;
-          line-height: 28px;
+          svg {
+            width: 24px;
+            height: 24px;
+          }
         }
 
-        p {
-          font-size: 12px;
+        .handles {
+          h3 {
+            font-size: 20px;
+            line-height: 28px;
+          }
+
+          p {
+            font-size: 12px;
+          }
         }
       }
     }
@@ -85,31 +93,35 @@
 
 @media screen and (max-width: 768px) {
   .contact_us {
-    flex-direction: column;
-    padding: 30px 0 0 0px;
-    gap: 26px;
+    .innerContainer {
+      width: fit-content;
+      align-items: start;
+      flex-direction: column;
+      padding: 30px 0 0 0px;
+      gap: 26px;
 
-    .contact_card {
-      gap: 10px;
+      .contact_card {
+        gap: 10px;
 
-      .icon {
-        width: 32px;
-        height: 32px;
+        .icon {
+          width: 32px;
+          height: 32px;
 
-        svg {
-          width: 16px;
-          height: 16px;
-        }
-      }
-
-      .handles {
-        h3 {
-          font-size: 18px;
-          line-height: 24px;
+          svg {
+            width: 16px;
+            height: 16px;
+          }
         }
 
-        p {
-          font-size: 8px;
+        .handles {
+          h3 {
+            font-size: 18px;
+            line-height: 24px;
+          }
+
+          p {
+            font-size: 8px;
+          }
         }
       }
     }
