--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -265,7 +265,7 @@
     border-radius: 24px;
     background-image: url("../public/hero-bg.png");
     background-size: cover;
-    background-position: center;
+    background-position: left;
     background-repeat: no-repeat;
 
     @media screen and (max-width: 998px) {
